feat: mvp of electron app

--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
-	"name": "sum-tracker",
-	"version": "1.0.0",
-	"description": "An appliation helping you track your opponents sums in League of Legends",
-	"main": "main.js",
-	"scripts": {
-		"start": "electron ."
-	},
-	"keywords": [],
-	"author": "",
-	"license": "MIT",
-	"devDependencies": {
-		"electron": "^27.1.2"
-	}
+  "name": "sum-tracker",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
